Fix zoom icons not showing on mobile view.

--- a/src/assets/css/ui-customizations.css.scss
+++ b/src/assets/css/ui-customizations.css.scss
@@ -985,6 +985,10 @@ div.dataTables_filter {
   z-index: 1;
 }
 
+.hc-openseadragon-viewer {
+  position: relative;
+}
+
 .navbar-left {
   float: left !important;
 }
